force-app/main/default/objects/Work_Detail__c/Work_Detail__c.object-meta.xml
<CustomObject>
    <label>Work Detail</label>
    <nameField>
        <label>Work Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>