force-app/main/default/objects/Work_Detail__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <type>TextArea</type>
</CustomField>