force-app/main/default/objects/Work_Detail__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <label>Organisation</label>
    <type>TextArea</type>
</CustomField>