force-app/main/default/objects/Work_Detail__c/fields/Student_Account__c.field-meta.xml
<CustomField>
    <fullName>Student_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Details</relationshipLabel>
    <relationshipName>Work_Details</relationshipName>
    <type>Lookup</type>
</CustomField>