force-app/main/default/objects/Work_Detail__c/fields/Work_experience_in_months__c.field-meta.xml
<CustomField>
    <fullName>Work_experience_in_months__c</fullName>
    <label>Work experience in months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>